improve carts endpoints and its swagger specification
